@@ -141,8 +141,8 @@ BEGIN_MESSAGE_MAP(CEditDlg, CDialog)
 	ON_BN_CLICKED(IDC_LTIME_CLEAR, OnBnClickedClearLTime)
 	ON_BN_CLICKED(IDC_LTIME_SET, OnBnClickedSetLTime)
 	ON_BN_CLICKED(IDC_PWHIST, OnBnClickedPwhist)
-    ON_EN_SETFOCUS(IDC_NOTES, OnEnSetfocusNotes)
-    ON_EN_KILLFOCUS(IDC_NOTES, OnEnKillfocusNotes)
+  ON_EN_SETFOCUS(IDC_NOTES, OnEnSetfocusNotes)
+  ON_EN_KILLFOCUS(IDC_NOTES, OnEnKillfocusNotes)
 END_MESSAGE_MAP()
 
 void CEditDlg::OnShowPassword() 
