@@ -555,7 +555,7 @@ BEGIN
     EDITTEXT        IDC_USERNAME,44,71,109,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_PASSWORD,44,87,109,14,ES_PASSWORD | ES_AUTOHSCROLL
     EDITTEXT        IDC_PASSWORD2,44,103,109,14,ES_PASSWORD | ES_AUTOHSCROLL | WS_DISABLED
-    EDITTEXT        IDC_NOTES,44,120,158,78,ES_MULTILINE | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL
+    EDITTEXT        IDC_NOTES,44,120,158,78,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
     EDITTEXT        IDC_URL,44,203,158,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_AUTOTYPE,44,220,109,14,ES_AUTOHSCROLL
     DEFPUSHBUTTON   "OK",IDOK,209,39,59,14
@@ -598,7 +598,7 @@ BEGIN
     EDITTEXT        IDC_USERNAME,52,65,109,14,ES_AUTOHSCROLL | ES_WANTRETURN
     EDITTEXT        IDC_PASSWORD,52,81,109,14,ES_PASSWORD | ES_AUTOHSCROLL | ES_WANTRETURN
     EDITTEXT        IDC_PASSWORD2,52,98,109,14,ES_PASSWORD | ES_AUTOHSCROLL | ES_WANTRETURN | WS_DISABLED
-    EDITTEXT        IDC_NOTES,52,114,152,96,ES_MULTILINE | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL
+    EDITTEXT        IDC_NOTES,52,114,152,96,ES_MULTILINE | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
     EDITTEXT        IDC_URL,52,221,152,14,ES_AUTOHSCROLL | ES_WANTRETURN
     EDITTEXT        IDC_AUTOTYPE,52,238,109,14,ES_AUTOHSCROLL | ES_WANTRETURN
     DEFPUSHBUTTON   "OK",IDOK,212,33,64,14
@@ -1100,6 +1100,7 @@ BEGIN
     CONTROL         "Show entries with identical compared fields (Note: Unknown fields were not compared.)",IDC_SHOW_IDENTICAL_ENTRIES,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,29,320,10
 END
+
 
 /////////////////////////////////////////////////////////////////////////////
 //
